--- a/gb/25/2/19/n14440601.md
+++ b/gb/25/2/19/n14440601.md
@@ -9,41 +9,41 @@
 	<p>【大纪元2025年02月19日讯】DeepSeek的出现引发AI替代人工的职场恐慌。继日前传出有企业裁掉95%的客服人员之后，首批70名基于DeepSeek开发的“AI公务员”近日在深圳福田开始提供服务，甚至有加油站也引进机器人加油，网民直呼“加油都用机器人了，钱越来越难赚了。”“娃都不敢生了。”</p>
 <p>据中共官媒央广网2月18日报导，这些“AI公务员”除拥有DeepSeek通用能力外，他们还熟悉公文处理、民生服务、应急管理、招商引资等多类工作。其公文格式修正准确率超95%，审核时间缩短90%，错误率也低于5%。</p>
 <p>不仅如此，近期深圳南头古城还出现了一名人形机器人在街头与警察一起执行巡逻的场景，引发许多网民担心机器人的登场可能抢了人类的“饭碗”。</p>
-<p>近日，一名女子发视频称，在一处加油站看见一排机器人加油，不禁感叹“加油都用机器人了，钱越来越难赚了”。</p>
+<figure id="attachment_14441323" aria-describedby="caption-attachment-14441323" style="width: 566px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/02/id14441323-jlfja.jpg"><img decoding="async" class="size-full wp-image-14441323" src="https://i.epochtimes.com/assets/uploads/2025/02/id14441323-jlfja.jpg" alt="" width="566" b="425" /></a><figcaption id="caption-attachment-14441323" class="wp-caption-text">（视频截图）</figcaption></figure>
+<p>此外，近日一名女子发视频称，在一处加油站看见一排机器人加油，不禁感叹“加油都用机器人了，钱越来越难赚了”。</p>
+<figure id="attachment_14441228" aria-describedby="caption-attachment-14441228" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/02/id14441228-04fc29722e451ccfd385e803644c745c.jpg"><img decoding="async" class="size-large wp-image-14441228" src="https://i.epochtimes.com/assets/uploads/2025/02/id14441228-04fc29722e451ccfd385e803644c745c-600x449.jpg" alt="" width="600" b="449" /></a><figcaption id="caption-attachment-14441228" class="wp-caption-text">（视频截图）</figcaption></figure>
 <p>网民们纷纷表示，“以后人工智能代替人类了，以后失业的人越来越多了。”“科技改变生活，科技也让很多人下了岗。”“抢普通人的饭碗，形成财富垄断，这种人工智能化的意义是啥？”“科技应更多考虑民生。”“看到这样，娃都不敢生了。”“生二胎三胎，长大以后干什么？”“想想都太可怕了。”</p>
 <p>对此，台湾中央社日前援引专家的话指出，中国大举应用AI，恐让许多传统工作将面临失业，使原本已严峻的就业市场雪上加霜。</p>
 <p>不过，网易一篇题为“中国最卑微的职业，被智障AI挤下岗”文章也指出，民众平常接触的多平台在线客服，如今也几乎是AI坐镇，但绝大多数AI客服更像是“人工智障”，把“请稍等”、“对不起”挂在嘴边，根本不理解用户在说什么，被用户吐槽智能客服一点也不智能，太笨了。</p>
 <p>责任编辑：高慧#</p>
 <p>&nbsp;</p>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/19/n14440520.md#1">浙江鳌江一编织袋厂发生大火 延烧十几小时</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/18/n14440260.md#1">青岛一食品配料厂发生粉尘爆炸 致5人死亡</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/18/n14439811.md#1">官方鼓动看《哪吒2》 民诉苦：观影后染疫</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/18/n14439667.md#1">四川简阳市发生3.0级地震 网民：窗子都响了</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545863.md#1">江苏三对母女包车旅游 四川坠崖2死5失联</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545620.md#1">湖南一景区11级大风吹翻游船 29人落水</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545635.md#1">山东一高校宿舍无空调 学生热晕送医</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545368.md#1">广西男子钓鱼触电被烧伤 鱼塘4千斤鱼被电死</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/28/n10813474.md#1" target="_blank">大饥荒是中共有计划的屠杀手段（上）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/8/3/29/n2063491.md#1" target="_blank">法轮功为什么要去中南海</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/9/n10377672.md#1" target="_blank">林辉：民国三位大师眼中的共产主义很可怕</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/10/12/n8391689.md#1" target="_blank">一个江湖亡命汉的不绝之命</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/7/11/n10554945.md#1">上马杀敌 下马写书的猛将薛仁贵</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/14/n14437085.md#1">英国医生披露 死而复活的人学到什么？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/11/n14434860.md#1">这些茶的雅号您知道吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/12/n14435443.md#1">梦中来讨债   原来这儿子是前世冤家</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/5/n14406509.md#1">【古道人生】为什么做了善事 看不到得好报？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/19/n14440379.md#1">【秦鹏观察】俄乌停战会谈 川普真实策略浮现</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/18/n14440181.md#1">【佳音时刻】美国绕欧与俄谈判 习见马云释信号</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/18/n14440262.md#1">【直播】美参院对帕特尔FBI局长提名初步投票</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/17/n14439057.md#1">北京召民企座谈 马云露面 中共算计引关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/10/n14433793.md#1">丰田RAV4比拼现代Tucson 权威车网点评混动车</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/16/n14438501.md#1">王友群：习为何不查远华案中泄露绝密文件者？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/15/n14438015.md#1">会否与赵丽颖三度搭戏 林更新高情商回应获赞</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/15/n14438035.md#1">《罗刹海市》牵线 刀郎邀蒲松龄后人看演唱会</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/16/n14438203.md#1">罗伯派汀森主演的《米奇17号》首映评价出炉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/17/n14439520.md#1">柏林影展上被问及敏感问题 范冰冰尴尬回应</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/16/n14438471.md#1">金赛纶于家中身亡 享年25岁 死因调查中</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/16/n14438278.md#1">想到游轮上度假？ 专家提醒你注意这几件事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/13/n14436037.md#1">牙周病四大警号别忽视 医生教你怎样预防</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/13/n14436154.md#1">五招保持胶原蛋白 让你显得更年轻</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/18/n14439735.md#1">孩子生气怎么办？ 专家：说这句话立即化解</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/9/n14433328.md#1">饮用水中持久化学物质或致癌症发病率上升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544980.md#1">【直播】川普签署“大而美法案”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540707.md#1">夏日沙拉这样做 清爽又健康 色彩缤纷又开胃</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/2/19/n14440601.htm">深圳现AI公务员 民众担忧工作越来越难找</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/2/19/n14440601.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
